Adding List interface methods, and some additional comments. Updated unit tests as well